--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body
 {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     text-align: center;
     background: rgb(0, 0, 0,.7);
     min-height: 100vh;
@@ -36,9 +36,7 @@ body
     border: none;
     border-radius: 25px;
     
-
 }
-
 .temp
 {
     font-size: 15px;
@@ -60,6 +58,7 @@ body
     align-items: center;
     justify-content: center;
     margin: auto;
+    
 }
 
 
@@ -71,6 +70,7 @@ body
     margin: 15px;
     background:rgb(32, 35, 41);
     border-radius: 13px;
+    
 }
 .cart-img img
 {
